Fixing Safari input issues / Background gradient stretch

--- a/app/styles/layout/_body.scss
+++ b/app/styles/layout/_body.scss
@@ -14,7 +14,6 @@ body {
 // outer-container for background image
 #outer-container {
     background-image: linear-gradient(rgba(0, 0, 0, 0.85) 15%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 1) 90%);
-    height: 100%;
     background-attachment: fixed;
     margin:0;
 }
