--- a/app/styles/layout/_search.scss
+++ b/app/styles/layout/_search.scss
@@ -41,7 +41,6 @@
 
       .tt-input {
         color: white;
-        padding-left: 30px;
       }
     }
   }
